# zypp-zmd-backend

./: .gitignore  CMakeLists.txt  Makefile.am  VERSION  VERSION.cmake  configure.ac  libzypp-zmd-backend.spec.in  libzypp-zmd-backend.spec.in.cmake  logrotate_zmd_backend
cmake/modules/: FindZypp.cmake
package/: libzypp-zmd-backend.changes  libzypp-zmd-backend.spec
src/: CMakeLists.txt  KeyRingCallbacks.h  Makefile.am  MediaChangeCallback.h  MessageResolvableReportCallback.h  RpmCallbacks.h  find-file.cc  locks.cc  locks.h  package-files.cc  parse-metadata.cc  query-files.cc  query-pool.cc  query-system  query-system.cc  resolve-dependencies.cc  service-delete.cc  transact.cc  transactions.cc  transactions.h  update-status.cc  zmd-backend.cc  zmd-backend.h  zmd-list-locks.cc  zmd-solver-testcase.cc  zypp-sources.cc
src/dbsource/: CMakeLists.txt  DbAccess.cc  DbAccess.h  DbAtomImpl.cc  DbAtomImpl.h  DbLanguageImpl.cc  DbLanguageImpl.h  DbMessageImpl.cc  DbMessageImpl.h  DbPackageImpl.cc  DbPackageImpl.h  DbPatchImpl.cc  DbPatchImpl.h  DbPatternImpl.cc  DbPatternImpl.h  DbProductImpl.cc  DbProductImpl.h  DbScriptImpl.cc  DbScriptImpl.h  DbSourceImpl.cc  DbSourceImpl.h  DbSources.cc  DbSources.h  Makefile.am  utils.cc  zmd-backend.cc  zmd-backend.h
testsuite/tests/: Makefile.am  catalogs.cc  linebreaks.cc  sources.cc  zyppowned.cc
testsuite/zmd.test/: linebreaks.exp
