## Process this file with automake to produce Makefile.in
## ##################################################

SUBDIRS = src testsuite

## ##################################################

.PHONY: package

package: dist

#ACLOCAL_AMFLAGS = -I m4
ACLOCAL_AMFLAGS =

EXTRA_DIST = mkinstalldirs
#config.rpath
